# directus-explorer

./: .env.example  .gitignore  README.md  dbgi_metadata_report.html  pyproject.toml  resume_species.tsv  sample_metadata_compact.tsv  sample_metadata_compact_jbuf.tsv  sample_metadata_compact_mnt.tsv
data/input/: link_containerID_Filename_JBN.csv  massive_dataset_neuch.csv  metadata_massive_champex.csv
data/output/: jbc_field_data_inspection_raw.json  massive_dataset_neuch_injection_audit.tsv  massive_dataset_neuch_injection_audit_extraction.tsv  resume.tsv  resume_dbgi_legacy.tsv  resume_dbgi_species.tsv  sample_metadata_dbgi_sample_compact.tsv
data/output/artemisia_absinthium/: metadata_absinthe_injection_audit_aliquot.tsv  metadata_absinthe_injection_import.csv  (+10 more)
scripts/: audit_directus_integrity.py  clear_droguier_name_proposition_when_taxon_present.py  export_ms_filename_sample_handover.py  generate_dbgi_metadata_report.py  import_droguier_extraction_only_ms.py  populate_field_data_unified_taxon.py  prepare_duplicate_observation_field_data_deletion.py  prepare_jbc_field_data_deletion.py  sanitize_artemisia_absinthium_metadata.py  sanitize_champex_gradient_metadata.py  sanitize_champex_metadata.py  sanitize_droguier_complete_metadata.py  sanitize_droguier_metadata.py
src/directus_explorer/: __init__.py  cli.py  config.py  directus.py  injection_audit.py  ms_converted_check.py  ms_metadata.py  samples.py  taxonomy.py
tests/: test_cli.py  test_config.py  test_directus.py  test_injection_audit.py  test_ms_converted_check.py  test_samples.py  test_taxonomy.py
(+222 files in other folders)
